IArchiveFile provider getConstructor